// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create text, change and revert with Enter/Escape in TextField 1`] = `
<TextField
  disabled={false}
  id=""
  onBlur={[Function]}
  onChange={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onValidation={[Function]}
  sizing="normal"
  type="text"
  usevalidation={false}
  validators={Array []}
  visible={true}
>
  <div
    className="ui-textfield textField normal"
  >
    <input
      className="textFieldInput"
      disabled={false}
      id=""
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      type="text"
    />
  </div>
</TextField>
`;

exports[`Test creating TextField and saving on blur 1`] = `
<TextField
  disabled={false}
  id=""
  onBlur={[Function]}
  onChange={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onValidation={[Function]}
  sizing="normal"
  type="text"
  usevalidation={false}
  validators={Array []}
  visible={true}
>
  <div
    className="ui-textfield textField normal"
  >
    <input
      className="textFieldInput"
      disabled={false}
      id=""
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      type="text"
    />
  </div>
</TextField>
`;

exports[`Test creation of a TextField control 1`] = `
<div
  className="ui-textfield textField normal test-class"
>
  <input
    className="textFieldInput"
    disabled={false}
    id=""
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    type="text"
  />
</div>
`;

exports[`Test creation of a TextField with email validation 1`] = `
<TextField
  disabled={false}
  id=""
  onBlur={[Function]}
  onChange={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onValidation={[Function]}
  sizing="normal"
  type="email"
  usevalidation={true}
  validators={Array []}
  visible={true}
>
  <div
    className="ui-textfield textField normal"
  >
    <input
      className="textFieldInput"
      disabled={false}
      id=""
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      type="email"
    />
    <div
      className="textFieldMessage small"
    >
       
    </div>
  </div>
</TextField>
`;

exports[`Test creation of a TextField with url validation 1`] = `
<TextField
  disabled={false}
  id=""
  onBlur={[Function]}
  onChange={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onValidation={[Function]}
  sizing="normal"
  type="url"
  usevalidation={true}
  validators={Array []}
  visible={true}
>
  <div
    className="ui-textfield textField normal"
  >
    <input
      className="textFieldInput"
      disabled={false}
      id=""
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      type="url"
    />
    <div
      className="textFieldMessage small"
    >
       
    </div>
  </div>
</TextField>
`;

exports[`Test creation of a textfield with min/max validation 1`] = `
<TextField
  disabled={false}
  id=""
  maxLength="10"
  minLength="5"
  onBlur={[Function]}
  onChange={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onValidation={[Function]}
  sizing="normal"
  type="text"
  usevalidation={true}
  validators={Array []}
  value=""
  visible={true}
>
  <div
    className="ui-textfield textField normal"
  >
    <input
      className="textFieldInput"
      disabled={false}
      id=""
      maxLength="10"
      minLength="5"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      type="text"
      value=""
    />
    <div
      className="textFieldMessage small"
    >
       
    </div>
  </div>
</TextField>
`;

exports[`Test disabling of a TextField control 1`] = `
<TextField
  disabled={true}
  id=""
  onBlur={[Function]}
  onChange={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onValidation={[Function]}
  sizing="normal"
  type="text"
  usevalidation={false}
  validators={Array []}
  visible={true}
>
  <div
    className="ui-textfield textField normal disabled nohover"
  >
    <input
      className="textFieldInput disabled"
      disabled={true}
      id=""
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      type="text"
    />
  </div>
</TextField>
`;

exports[`Test making the TextField invisible 1`] = `
<TextField
  disabled={false}
  id=""
  onBlur={[Function]}
  onChange={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onValidation={[Function]}
  sizing="normal"
  type="text"
  usevalidation={false}
  validators={Array []}
  visible={false}
>
  <div
    className="ui-textfield textField normal invisible"
  >
    <input
      className="textFieldInput"
      disabled={false}
      id=""
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      type="text"
    />
  </div>
</TextField>
`;

exports[`Test retrieval of TextField props object 1`] = `
Object {
  "disabled": false,
  "id": "",
  "onBlur": [Function],
  "onChange": [Function],
  "onKeyDown": [Function],
  "onKeyPress": [Function],
  "onValidation": [Function],
  "sizing": "normal",
  "type": "text",
  "usevalidation": false,
  "validators": Array [],
  "visible": true,
}
`;
